added missing pdfs

--- a/README.html
+++ b/README.html
@@ -45,6 +45,14 @@
 <ul>
 <li>Introduces Resnet architecture</li>
 </ul></li>
+<li><a href="General/2015-jaderberg-spatial-transformer.pdf">2015-jaderberg-spatial-transformer</a>
+<ul>
+<li>adds spatial transformations/distortions to learnable primitives</li>
+</ul></li>
+<li><a href="General/2017-dai-deformable.pdf">2017-dai-deformable</a>
+<ul>
+<li>adds deformable convolutions to learnable primitives</li>
+</ul></li>
 </ul>
 <p>OCR:</p>
 <ul>
@@ -64,27 +72,21 @@
 <ul>
 <li>general U-net architecture for image-to-image mappings</li>
 </ul></li>
-</ul>
-<!-- more pixel2pixel, image2image transformations -->
-<h2 id="additional-kernels">Additional Kernels</h2>
+<li><a href="Blogs/2017-blogpost-semantic-segmentation.pdf">2017-blogpost-semantic-segmentation.pdf</a>
 <ul>
-<li><a href="General/2015-jaderberg-spatial-transformer.pdf">2015-jaderberg-spatial-transformer</a>
-<ul>
-<li>adds spatial transformations/distortions to learnable primitives</li>
-</ul></li>
-<li><a href="General/2017-dai-deformable.pdf">2017-dai-deformable</a>
-<ul>
-<li>adds deformable convolutions to learnable primitives</li>
+<li>survey of semantic segmentation architectures</li>
 </ul></li>
 <li><a href="General/2017-chen-deeplab-atrous.pdf">2017-chen-deeplab-atrous</a>
 <ul>
+<li>semantic segmentation</li>
 <li>adds atrous convolutions to learnable primitives</li>
 </ul></li>
 <li><a href="General/2017-chen-rethinking-atrous.pdf">2017-chen-rethinking-atrous</a>
 <ul>
-<li>adds atrous convolutions to learnable primitives</li>
+<li>adds atrous convolutions to learnable primitives, deeplab v3</li>
 </ul></li>
 </ul>
+<!-- more pixel2pixel, image2image transformations -->
 <h2 id="rcnn-and-overfeat">RCNN and Overfeat</h2>
 <ul>
 <li><a href="General/2014-lecun-overfeat.pdf">2014-lecun-overfeat</a>
@@ -328,7 +330,7 @@
 <ul>
 <li><a href="General/2014-schmidhuber-deep-learning-survey.pdf">2014-schmidhuber-deep-learning-survey</a></li>
 <li><a href="General/2015-lecun-nature-deep-learning.pdf">2015-lecun-nature-deep-learning</a></li>
-<li><a href="OCR/2015-karpathy-recurrent-ocr.pdf">2015-karpathy-recurrent-ocr</a></li>
+<li><a href="Blogs/2015-karpathy-recurrent-ocr.pdf">2015-karpathy-recurrent-ocr</a></li>
 <li><a href="General/2018-alom-survey-imagenet.pdf">2018-alom-survey-imagenet</a></li>
 </ul>
 <h1 id="additional-readings">Additional Readings</h1>
