--- a/README.html
+++ b/README.html
@@ -56,10 +56,18 @@
 </ul>
 <p>OCR:</p>
 <ul>
+<li><a href="OCR/2013-breuel-high-performance-ocr-lstm.pdf">2013-breuel-high-performance-ocr-lstm</a>
+<ul>
+<li>LSTM for printed OCR</li>
+</ul></li>
 <li><a href="OCR/2013-goodfellow-multidigit.pdf">2013-goodfellow-multidigit</a>
 <ul>
 <li>Google SVHN digits, 200k numbers with bounding boxes</li>
 <li>8 layer convnet, ad-hoc sequence modeling</li>
+</ul></li>
+<li><a href="OCR/2017-breuel-lstm-ocr.pdf">2017-breuel-lstm-ocr</a>
+<ul>
+<li>comparison of different convnet+LSTM architectures for OCR</li>
 </ul></li>
 </ul>
 <h2 id="segmentation-superresolution-with-convolutional-networks">Segmentation, Superresolution with Convolutional Networks</h2>
@@ -72,21 +80,61 @@
 <ul>
 <li>general U-net architecture for image-to-image mappings</li>
 </ul></li>
-<li><a href="Blogs/2017-blogpost-semantic-segmentation.pdf">2017-blogpost-semantic-segmentation.pdf</a>
+<li><a href="General/2015-byeon-mdlstm-segmentation.pdf">2015-byeon-mdlstm-segmentation</a>
+<ul>
+<li>MDLSTM for image segmentation</li>
+</ul></li>
+<li><a href="General/2015-stollenga-pyramid-lstm.pdf">2015-stollenga-pyramid-lstm</a>
+<ul>
+<li>pyramid LSTM architecture</li>
+</ul></li>
+<li><a href="General/2015-long-convnet-semantic-segmentation.pdf">2015-long-convnet-semantic-segmentation</a>
+<ul>
+<li>semantic segmentation with convolutional networks</li>
+</ul></li>
+<li><a href="General/2015-girshick-rich-feature-hierarchies.pdf">2015-girshick-rich-feature-hierarchies</a>
+<ul>
+<li>semantic segmentation with convolutional networks (multitask)</li>
+</ul></li>
+<li><a href="General/2015-noh-deconvolutional-networks.pdf">2015-noh-deconvolutional-networks</a>
+<ul>
+<li>atrous convolutions</li>
+</ul></li>
+<li><a href="Blogs/2017-blogpost-semantic-segmentation.pdf">2017-blogpost-semantic-segmentation</a>
 <ul>
 <li>survey of semantic segmentation architectures</li>
 </ul></li>
-<li><a href="General/2017-chen-deeplab-atrous.pdf">2017-chen-deeplab-atrous</a>
-<ul>
-<li>semantic segmentation</li>
-<li>adds atrous convolutions to learnable primitives</li>
-</ul></li>
+<li><a href="General/2016-chen-deeplab.pdf">2016-chen-deeplab</a></li>
+<li><a href="General/2017-chen-deeplab-atrous.pdf">2017-chen-deeplab-atrous</a></li>
 <li><a href="General/2017-chen-rethinking-atrous.pdf">2017-chen-rethinking-atrous</a>
 <ul>
-<li>adds atrous convolutions to learnable primitives, deeplab v3</li>
+<li>atrous convolutions to learnable primitives, deeplab v3</li>
 </ul></li>
 </ul>
-<!-- more pixel2pixel, image2image transformations -->
+<p>OCR:</p>
+<ul>
+<li><a href="OCR/2015-afzal-binarization-mdlstm.pdf">2015-afzal-binarization-mdlstm</a>
+<ul>
+<li>MDLSTM for binarization (image-to-image transformation)</li>
+</ul></li>
+<li><a href="OCR/2017-breuel-mdlstm-layout.pdf">2017-breuel-mdlstm-layout</a>
+<ul>
+<li>layout analysis with MDLSTM</li>
+</ul></li>
+<li><a href="OCR/2017-chen-convnet-page-segmentation.pdf">2017-chen-convnet-page-segmentation</a>
+<ul>
+<li>layout analysis with convolutional nteworks</li>
+</ul></li>
+<li><a href="OCR/2017-he-semantic-page-segmentation.pdf">2017-he-semantic-page-segmentation</a>
+<ul>
+<li>layout analysis with convolutional nteworks</li>
+</ul></li>
+<li><a href="OCR/2018-mohan-layout-error-correction-using-dnn.pdf">2018-mohan-layout-error-correction-using-dnn</a>
+<ul>
+<li>layout analysis with convolutional nteworks</li>
+</ul></li>
+</ul>
+<!-- pix2pix etc. -->
 <h2 id="rcnn-and-overfeat">RCNN and Overfeat</h2>
 <ul>
 <li><a href="General/2014-lecun-overfeat.pdf">2014-lecun-overfeat</a>
@@ -174,6 +222,7 @@
 <li>large CNN, Maxout units, LSTM, CTC</li>
 <li>Street View Text, IIT 5k-word, PhotoOCR, etc., using bounding boxes for training</li>
 </ul></li>
+<li><a href="OCR/2017-wang-gru-ocr.pdf">2017-wang-gru-ocr</a></li>
 </ul>
 <h2 id="d-lstm">2D LSTM</h2>
 <ul>
@@ -266,6 +315,10 @@
 <li>recursive convolutional layers, tied weights, followed by attention, character level modeling</li>
 <li>ICDAR 2003, 2013, SVT, IIT5k, Synth90k using bounding boxes for training</li>
 </ul></li>
+</ul>
+<h2 id="language-modeling">Language Modeling</h2>
+<ul>
+<li><a href="OCR/2016-rosca-lstm-transcript.pdf">2016-rosca-lstm-transcript</a></li>
 </ul>
 <h2 id="domain-adaptation-unsupervised-semi-supervised-multitask-learning">Domain Adaptation, Unsupervised, Semi-Supervised, Multitask Learning</h2>
 <p>Domain Adaptation:</p>
