--- a/README.html
+++ b/README.html
@@ -316,99 +316,95 @@
 <li>ICDAR 2003, 2013, SVT, IIT5k, Synth90k using bounding boxes for training</li>
 </ul></li>
 </ul>
-<h2 id="language-modeling">Language Modeling</h2>
-<ul>
-<li><a href="OCR/2016-rosca-lstm-transcript.pdf">2016-rosca-lstm-transcript</a></li>
-</ul>
-<h2 id="domain-adaptation-unsupervised-semi-supervised-multitask-learning">Domain Adaptation, Unsupervised, Semi-Supervised, Multitask Learning</h2>
-<p>Domain Adaptation:</p>
-<ul>
-<li><a href="Learning/2017-liu-unsupervised-domain-adaptation.pdf">2017-liu-unsupervised-domain-adaptation</a></li>
-<li><a href="Learning/2017-tzen-adversarial-domain-discriminator-adaptation.pdf">2017-tzen-adversarial-domain-discriminator-adaptation</a></li>
-</ul>
-<p>Semi-Supervised Learning:</p>
-<ul>
-<li><a href="Learning/2005-zhu-semi-supervised.pdf">2005-zhu-semi-supervised</a>
-<ul>
-<li>classical methods of semi-supervised learning</li>
-</ul></li>
-<li><a href="Learning/2017-li-noisy-labels-distillation.pdf">2017-li-noisy-labels-distillation</a>
-<ul>
-<li>uses distillation for dealing with noisy lables</li>
-</ul></li>
-<li><a href="Learning/2018-oliver-evaluation-semi-supervised.pdf">2018-oliver-evaluation-semi-supervised</a></li>
-<li><a href="Learning/2018-ren-metalearning-semi-supervised.pdf">2018-ren-metalearning-semi-supervised</a></li>
-<li><a href="Learning/2018-tanaka-joint-optimization-noisy-labels.pdf">2018-tanaka-joint-optimization-noisy-labels</a></li>
-</ul>
-<p>Examples of Unsupervised Learning:</p>
-<ul>
-<li><a href="Learning/2016-lin-unsupervised-binary-descriptors.pdf">2016-lin-unsupervised-binary-descriptors</a></li>
-<li><a href="Learning/2016-radford-unsupervised-representation-learning.pdf">2016-radford-unsupervised-representation-learning</a></li>
-<li><a href="Learning/2016-xie-unsupervised-deep-embedding.pdf">2016-xie-unsupervised-deep-embedding</a></li>
-<li><a href="Learning/2017-ren-unsupervised-deep-flow.pdf">2017-ren-unsupervised-deep-flow</a></li>
-<li><a href="Learning/2017-lotter-unsupervised-predictive-video-coding.pdf">2017-lotter-unsupervised-predictive-video-coding</a></li>
-<li><a href="Learning/2018-li-unsupervised-odometry.pdf">2018-li-unsupervised-odometry</a></li>
-</ul>
-<p>Transfer and Multitask Learning:</p>
-<ul>
-<li><a href="Learning/2016-geng-transfer-learning-reid.pdf">2016-geng-transfer-learning-reid</a></li>
-<li><a href="Learning/2016-rusu-progressive-networks.pdf">2016-rusu-progressive-networks</a></li>
-<li><a href="Learning/2017-ruder-multitask-survey.pdf">2017-ruder-multitask-survey</a></li>
-</ul>
-<h2 id="gans">GANs</h2>
-<ul>
-<li><a href="General/2014-goodfellow-gans.pdf">2014-goodfellow-gans</a></li>
-<li><a href="General/2015-radford-dcgan.pdf">2015-radford-dcgan</a></li>
-<li><a href="General/2016-isola-image2image-gan.pdf">2016-isola-image2image-gan</a></li>
-<li><a href="General/2016-salimans-improved-gan-training.pdf">2016-salimans-improved-gan-training</a></li>
-</ul>
-<!-- - [2016-ho-gan-imitation-learning](General/2016-ho-gan-imitation-learning.pdf) -->
-<!-- # Siamese -->
-<h2 id="computational-issues">Computational Issues</h2>
-<ul>
-<li><a href="General/2017-chen-distributed-sgd.pdf">2017-chen-distributed-sgd</a>
-<ul>
-<li>scaling up with many GPUs on many nodes</li>
-</ul></li>
-<li><a href="General/2016-iandola-squeezenet.pdf">2016-iandola-squeezenet</a>
-<ul>
-<li>reducing the number of parameters</li>
-</ul></li>
-<li><a href="General/2017-yuan-adversarial.pdf">2017-yuan-adversarial</a>
-<ul>
-<li>the existence and problems with adversarial samples</li>
-</ul></li>
-</ul>
-<h1 id="surveys">Surveys</h1>
-<ul>
-<li><a href="General/2014-schmidhuber-deep-learning-survey.pdf">2014-schmidhuber-deep-learning-survey</a></li>
-<li><a href="General/2015-lecun-nature-deep-learning.pdf">2015-lecun-nature-deep-learning</a></li>
-<li><a href="Blogs/2015-karpathy-recurrent-ocr.pdf">2015-karpathy-recurrent-ocr</a></li>
-<li><a href="General/2018-alom-survey-imagenet.pdf">2018-alom-survey-imagenet</a></li>
-</ul>
-<h1 id="additional-readings">Additional Readings</h1>
-<ul>
-<li><a href="More/2013-goodfellow-maxout.pdf">2013-goodfellow-maxout</a></li>
-<li><a href="General/2014-donahue-long-term-rcnn.pdf">2014-donahue-long-term-rcnn</a></li>
-<li><a href="General/2014-karpathy-image-descriptions.pdf">2014-karpathy-image-descriptions</a></li>
-<li><a href="General/2015-liu-face-attributes-wild.pdf">2015-liu-face-attributes-wild</a></li>
-<li><a href="General/2015-mnih-deep-reinforcement-learning.pdf">2015-mnih-deep-reinforcement-learning</a></li>
-<li><a href="General/2015-ng-video-classification.pdf">2015-ng-video-classification</a></li>
-<li><a href="General/2015-yu-visual-madlibs.pdf">2015-yu-visual-madlibs</a></li>
-<li><a href="General/2015-zheng-crfs-as-rnns.pdf">2015-zheng-crfs-as-rnns</a></li>
-<li><a href="General/2016-abadi-tensorflow.pdf">2016-abadi-tensorflow</a></li>
-<li><a href="More/2016-ba-layernorm.pdf">2016-ba-layernorm</a></li>
-<li><a href="General/2016-mnih-async-dl.pdf">2016-mnih-async-dl</a></li>
-<li><a href="More/2016-salimans-weightnorm.pdf">2016-salimans-weightnorm</a></li>
-<li><a href="More/2016-shi-superresolution.pdf">2016-shi-superresolution</a></li>
-<li><a href="More/2016-ulyanof-instancenorm.pdf">2016-ulyanof-instancenorm</a></li>
-<li><a href="General/2016-vinyals-matching-networks.pdf">2016-vinyals-matching-networks</a></li>
-<li><a href="General/2016-zhang-very-deep-speech.pdf">2016-zhang-very-deep-speech</a></li>
-<li><a href="More/2017-barron-celu.pdf">2017-barron-celu</a></li>
-<li><a href="More/2017-hochrreiter-self-normalizing-networks.pdf">2017-hochrreiter-self-normalizing-networks</a></li>
-<li><a href="More/2017-ioffe-batchnorm.pdf">2017-ioffe-batchnorm</a></li>
-<li><a href="General/2017-wang-tacotron.pdf">2017-wang-tacotron</a></li>
-<li><a href="General/2018-burda-curiosity.pdf">2018-burda-curiosity</a></li>
-<li><a href="General/2018-metz-metalearning.pdf">2018-metz-metalearning</a></li>
-<li><a href="More/2018-wu-groupnorm.pdf">2018-wu-groupnorm</a></li>
-</ul>
+<!-- 
+
+## Language Modeling
+
+- [2016-rosca-lstm-transcript](OCR/2016-rosca-lstm-transcript.pdf)
+
+## Domain Adaptation, Unsupervised, Semi-Supervised, Multitask Learning
+
+Domain Adaptation:
+
+- [2017-liu-unsupervised-domain-adaptation](Learning/2017-liu-unsupervised-domain-adaptation.pdf)
+- [2017-tzen-adversarial-domain-discriminator-adaptation](Learning/2017-tzen-adversarial-domain-discriminator-adaptation.pdf)
+
+Semi-Supervised Learning:
+
+- [2005-zhu-semi-supervised](Learning/2005-zhu-semi-supervised.pdf)
+    - classical methods of semi-supervised learning
+- [2017-li-noisy-labels-distillation](Learning/2017-li-noisy-labels-distillation.pdf)
+    - uses distillation for dealing with noisy lables
+- [2018-oliver-evaluation-semi-supervised](Learning/2018-oliver-evaluation-semi-supervised.pdf)
+
+- [2018-ren-metalearning-semi-supervised](Learning/2018-ren-metalearning-semi-supervised.pdf)
+- [2018-tanaka-joint-optimization-noisy-labels](Learning/2018-tanaka-joint-optimization-noisy-labels.pdf)
+
+Examples of Unsupervised Learning:
+
+- [2016-lin-unsupervised-binary-descriptors](Learning/2016-lin-unsupervised-binary-descriptors.pdf)
+- [2016-radford-unsupervised-representation-learning](Learning/2016-radford-unsupervised-representation-learning.pdf)
+- [2016-xie-unsupervised-deep-embedding](Learning/2016-xie-unsupervised-deep-embedding.pdf)
+- [2017-ren-unsupervised-deep-flow](Learning/2017-ren-unsupervised-deep-flow.pdf)
+- [2017-lotter-unsupervised-predictive-video-coding](Learning/2017-lotter-unsupervised-predictive-video-coding.pdf)
+- [2018-li-unsupervised-odometry](Learning/2018-li-unsupervised-odometry.pdf)
+
+Transfer and Multitask Learning:
+
+- [2016-geng-transfer-learning-reid](Learning/2016-geng-transfer-learning-reid.pdf)
+- [2016-rusu-progressive-networks](Learning/2016-rusu-progressive-networks.pdf)
+- [2017-ruder-multitask-survey](Learning/2017-ruder-multitask-survey.pdf)
+
+## GANs
+
+- [2014-goodfellow-gans](General/2014-goodfellow-gans.pdf)
+- [2015-radford-dcgan](General/2015-radford-dcgan.pdf)
+- [2016-isola-image2image-gan](General/2016-isola-image2image-gan.pdf)
+- [2016-salimans-improved-gan-training](General/2016-salimans-improved-gan-training.pdf)
+
+- [2016-ho-gan-imitation-learning](General/2016-ho-gan-imitation-learning.pdf)
+## Siamese
+
+## Computational Issues
+
+- [2017-chen-distributed-sgd](General/2017-chen-distributed-sgd.pdf)
+    - scaling up with many GPUs on many nodes
+- [2016-iandola-squeezenet](General/2016-iandola-squeezenet.pdf)
+    - reducing the number of parameters
+- [2017-yuan-adversarial](General/2017-yuan-adversarial.pdf)
+    - the existence and problems with adversarial samples
+
+# Surveys
+
+- [2014-schmidhuber-deep-learning-survey](General/2014-schmidhuber-deep-learning-survey.pdf)
+- [2015-lecun-nature-deep-learning](General/2015-lecun-nature-deep-learning.pdf)
+- [2015-karpathy-recurrent-ocr](Blogs/2015-karpathy-recurrent-ocr.pdf)
+- [2018-alom-survey-imagenet](General/2018-alom-survey-imagenet.pdf)
+
+# Additional Readings
+
+- [2013-goodfellow-maxout](More/2013-goodfellow-maxout.pdf)
+- [2014-donahue-long-term-rcnn](General/2014-donahue-long-term-rcnn.pdf)
+- [2014-karpathy-image-descriptions](General/2014-karpathy-image-descriptions.pdf)
+- [2015-liu-face-attributes-wild](General/2015-liu-face-attributes-wild.pdf)
+- [2015-mnih-deep-reinforcement-learning](General/2015-mnih-deep-reinforcement-learning.pdf)
+- [2015-ng-video-classification](General/2015-ng-video-classification.pdf)
+- [2015-yu-visual-madlibs](General/2015-yu-visual-madlibs.pdf)
+- [2015-zheng-crfs-as-rnns](General/2015-zheng-crfs-as-rnns.pdf)
+- [2016-abadi-tensorflow](General/2016-abadi-tensorflow.pdf)
+- [2016-ba-layernorm](More/2016-ba-layernorm.pdf)
+- [2016-mnih-async-dl](General/2016-mnih-async-dl.pdf)
+- [2016-salimans-weightnorm](More/2016-salimans-weightnorm.pdf)
+- [2016-shi-superresolution](More/2016-shi-superresolution.pdf)
+- [2016-ulyanof-instancenorm](More/2016-ulyanof-instancenorm.pdf)
+- [2016-vinyals-matching-networks](General/2016-vinyals-matching-networks.pdf)
+- [2016-zhang-very-deep-speech](General/2016-zhang-very-deep-speech.pdf)
+- [2017-barron-celu](More/2017-barron-celu.pdf)
+- [2017-hochrreiter-self-normalizing-networks](More/2017-hochrreiter-self-normalizing-networks.pdf)
+- [2017-ioffe-batchnorm](More/2017-ioffe-batchnorm.pdf)
+- [2017-wang-tacotron](General/2017-wang-tacotron.pdf)
+- [2018-burda-curiosity](General/2018-burda-curiosity.pdf)
+- [2018-metz-metalearning](General/2018-metz-metalearning.pdf)
+- [2018-wu-groupnorm](More/2018-wu-groupnorm.pdf)
+
+-->
